update fix animation for collapsing and select for collapse

--- a/vue-datatable/src/assets/_animations.scss
+++ b/vue-datatable/src/assets/_animations.scss
@@ -1,32 +1,15 @@
 
-.slide-enter-active {
-    -moz-transition-duration: 0.3s;
-    -webkit-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -moz-transition-timing-function: ease-in;
-    -webkit-transition-timing-function: ease-in;
-    -o-transition-timing-function: ease-in;
-    transition-timing-function: ease-in;
- }
- 
- .slide-leave-active {
-    -moz-transition-duration: 0.3s;
-    -webkit-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -moz-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
-    -webkit-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
-    -o-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
-    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
- }
+.slide-enter-active,
+.slide-leave-active {
+     transition: .5s;
+}
  
  .slide-enter-to, .slide-leave {
-    max-height: 100px;
+    max-height: 50vh;
     overflow: hidden;
  }
  
  .slide-enter, .slide-leave-to {
      max-height: 0;
      overflow: hidden;
- }
+}
